# writers-block

./: .env_sample  .gitignore  README.md  package.json  pyproject.toml
src/app/: app.py
src/app/styles/default/: active_voice.md  anthropomorphism.md  ducks.md  sentence_structure.md
src/app/templates/: index.html
src/client/: index.html  package-lock.json  package.json
src/client/src/: App.svelte  Editor.svelte  Prism.svelte  RuleEditor.svelte  StyleRule.svelte  TextEditor.svelte  Wall.svelte  app.css  rule_store.ts  utils.ts
src/libs/: hal9000.py
tests/: test_app.py
